add style to hme page

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
   <body>
     <head>
       <nav>
-        <li>Home</li>
-        <li>Menu</li>
-        <li>Contact</li>
+        <ul>
+          <li>HOME</li>
+          <li>MENU</li>
+          <li>CONTACT</li>
+        </ul>
       </nav>
 
       <main>
-        <h1>Welcom to restaurant Certil</h1>
+        <h1>Welcome to restaurant Certil</h1>
+        <img src="./chef.jpg" alt="chef" />
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit
           obcaecati odio quidem doloremque similique, est delectus recusandae,
@@ -23,6 +26,7 @@
           consequuntur ad doloribus commodi officiis?
         </p>
       </main>
+      <footer>Design by Certil Remy</footer>
     </head>
 
     <script src="./index.html"></script>
